# tinynet

./: .gitignore  CMakeLists.txt  clear-hosts.sh  install.sh
examples/: sample.tn  simple.toml
src/: crc32.c  entity.c  entity.h  ll.h  main.c  parse.h  parser.c  vec.h  vector.c  vector.h  vm.c  vm.h
test/: basic.tn  httpd.py  run-tests.sh
